--- a/src/app/container/welcome-portal-container/welcome-portal-container.component.html
+++ b/src/app/container/welcome-portal-container/welcome-portal-container.component.html
@@ -16,7 +16,7 @@
 
         <mat-step label="Ready">
           <p>You are now ready to</p>
-          <button mat-raised-button color="primary">
+          <button (click)="launchGame()" mat-raised-button color="primary">
             Launch game
           </button>
           <div>
