implement leader board

--- a/src/app/container/leader-board-container/leader-board-container.component.html
+++ b/src/app/container/leader-board-container/leader-board-container.component.html
@@ -2,7 +2,8 @@
   <div class="board row justify-content-center align-items-center">
     <div class="col-8">
       <h1>Welcome to Leader Board</h1>
-      <sg-app-leader-board-table [dataSource]="dataSource" [displayedColumns]="displayedColumns"></sg-app-leader-board-table>
+      <sg-app-leader-board-table *ngIf="!(isLoading$ | async)" [dataSource]="dataSource" [displayedColumns]="displayedColumns"></sg-app-leader-board-table>
+      <mat-spinner *ngIf="(isLoading$ | async)"></mat-spinner>
 
       <div class="board__btn-group">
         <button (click)="goToHome()" mat-raised-button color="primary">Go to Home</button>
