--- a/src/app/container/leader-board-container/leader-board-container.component.scss
+++ b/src/app/container/leader-board-container/leader-board-container.component.scss
@@ -7,8 +7,13 @@
     text-align: center;
   }
 
+  mat-spinner {
+    margin: 0 auto;
+  }
+
   &__btn-group {
     margin-top: space(lg);
+
     button {
       margin-right: space(sm);
     }
